--- a/CleanArchMvc.WebUI/appsettings.Development.json
+++ b/CleanArchMvc.WebUI/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-THQVU3L\\SQLEXPRESS;Initial Catalog=CleanArchDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
