Implementação de autenticação JWT

--- a/CleanArchMvc.API/appsettings.json
+++ b/CleanArchMvc.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-THQVU3L\\SQLEXPRESS;Initial Catalog=CleanArchDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "Jwt":{
+    "SecretKey": "abra#cadabra$sim@salabim*2022",
+    "Issuer": "murillo.net",
+    "Audience" :  "http://www.murillo.net"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
